@@ -9158,7 +9158,7 @@ This will generate the 5th segment containing representations A and V2.
 .br
 
 .br
-The filter does not store any state, it is the user respansability to use consistent informations across calls:
+The filter does not store any state, it is the user responsability to use consistent informations across calls:
 .br
 - do not change segment templates
 .br
@@ -11553,7 +11553,7 @@ Authors: GPAC developers, see git repo history (-log)
 .br
 For bug reports, feature requests, more information and source code, visit https://github.com/gpac/gpac
 .br
-build: 2.3-DEV-rev203-ge886e4520-master
+build: 2.3-DEV-rev210-g3ec0dc927-master
 .br
 Copyright: (c) 2000-2023 Telecom Paris distributed under LGPL v2.1+ - http://gpac.io
 .br
