@@ -2034,7 +2034,12 @@ S set target ID
 .TP
 .B tkgp (string)
 .br
-S assign tack group to track. Value is formatted as TYPE,N with TYPE the track group type (4CC) and N the track group ID. A negative ID removes from track group ID -N
+S assign track group to track. Value is formatted as TYPE,N with TYPE the track group type (4CC) and N the track group ID. A negative ID removes from track group ID -N
+.br
+.TP
+.B tkidx (string)
+.br
+S set track position in tracklist, 1 being first track in file
 .br
 .TP
 .B stats,-fstat
@@ -2931,7 +2936,7 @@ Authors: GPAC developers, see git repo history (-log)
 .br
 For bug reports, feature requests, more information and source code, visit https://github.com/gpac/gpac
 .br
-build: 2.3-DEV-rev203-ge886e4520-master
+build: 2.3-DEV-rev210-g3ec0dc927-master
 .br
 Copyright: (c) 2000-2023 Telecom Paris distributed under LGPL v2.1+ - http://gpac.io
 .br
